Fix Draenic Hologem logic, properly this time.
Fix timeout for randomising toys when only one is enabled with 'Random' icon selected